WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224904
Sometimes appHighlights are not painted when created.
https://bugs.webkit.org/show_bug.cgi?id=224904
Summary
Sometimes appHighlights are not painted when created.
Megan Gardner
Reported
2021-04-21 16:27:05 PDT
Sometimes appHighlights are not painted when created.
Attachments
Patch
(2.02 KB, patch)
2021-04-21 16:29 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(4.96 KB, patch)
2021-04-22 01:21 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(4.99 KB, patch)
2021-04-22 02:01 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(4.94 KB, patch)
2021-04-22 11:02 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(5.00 KB, patch)
2021-04-22 12:31 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.00 KB, patch)
2021-04-22 20:06 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2021-04-21 16:29:36 PDT
Created
attachment 426752
[details]
Patch
Antti Koivisto
Comment 2
2021-04-21 21:28:51 PDT
Comment on
attachment 426752
[details]
Patch Please add a test.
Megan Gardner
Comment 3
2021-04-22 01:21:06 PDT
Created
attachment 426789
[details]
Patch
Megan Gardner
Comment 4
2021-04-22 02:01:32 PDT
Created
attachment 426791
[details]
Patch
Megan Gardner
Comment 5
2021-04-22 11:02:46 PDT
Created
attachment 426829
[details]
Patch
Tim Horton
Comment 6
2021-04-22 11:19:28 PDT
Comment on
attachment 426829
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=426829&action=review
You can just forward Antti's review.
> Source/WebCore/ChangeLog:7 > +
Somehow you lost the `New test: ...` line here
> Source/WebCore/ChangeLog:8 > + In order for highlights to be painted correclty, we need to not use the new line layout code,
"correctly"
Megan Gardner
Comment 7
2021-04-22 12:31:22 PDT
Created
attachment 426838
[details]
Patch
Megan Gardner
Comment 8
2021-04-22 20:06:11 PDT
Created
attachment 426885
[details]
Patch for landing
EWS
Comment 9
2021-04-22 20:57:05 PDT
Committed
r276484
(
236943@main
): <
https://commits.webkit.org/236943@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426885
[details]
.
Megan Gardner
Comment 10
2021-04-23 00:09:56 PDT
rdar://76786408
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug