Sometimes appHighlights are not painted when created. https://bugs.webkit.org/show_bug.cgi?id=224904

Reviewed by Antti Koivisto.

Source/WebCore:

In order for highlights to be painted correctly, we need to not use the new line layout code,
so we need to opt out when we are repainting due to a highlight being added or removed.

Test: http/wpt/css/css-highlight-api/highlight-text-dynamic.html

* Modules/highlight/Highlight.cpp:
(WebCore::repaintRange):

LayoutTests:

* http/wpt/css/css-highlight-api/highlight-text-dynamic-expected-mismatch.html: Added.
* http/wpt/css/css-highlight-api/highlight-text-dynamic.html: Added.


Canonical link: https://commits.webkit.org/236943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276484 268f45cc-cd09-0410-ab3c-d52691b4dbfc