Source/WebCore/Modules/highlight/Highlight.cpp
@@ -31,10 +31,15 @@
 #include "JSStaticRange.h"
 #include "NodeTraversal.h"
 #include "PropertySetCSSStyleDeclaration.h"
+#include "RenderBlockFlow.h"
 #include "RenderObject.h"
 #include "StaticRange.h"
 #include "StyleProperties.h"
 #include <wtf/Ref.h>
+
+#if ENABLE(LAYOUT_FORMATTING_CONTEXT)
+#include "LayoutIntegrationLineLayout.h"
+#endif
 
 namespace WebCore {
 
@@ -62,8 +67,13 @@ static void repaintRange(const SimpleRange& range)
     if (is_gt(treeOrder<ComposedTree>(range.start, range.end)))
         std::swap(sortedRange.start, sortedRange.end);
     for (auto& node : intersectingNodes(sortedRange)) {
-        if (auto renderer = node.renderer())
+        if (auto renderer = node.renderer()) {
+#if ENABLE(LAYOUT_FORMATTING_CONTEXT)
+            if (auto lineLayout = LayoutIntegration::LineLayout::containing(*renderer))
+                lineLayout->flow().ensureLineBoxes();
+#endif
             renderer->repaint();
+        }
     }
 }
 
